[gd_scene load_steps=8 format=3 uid="uid://e6go5bc8yywi"]

[ext_resource type="FontFile" uid="uid://c7mrjomkw4gdm" path="res://dodge_the_creeps_2d_assets/fonts/Xolonium-Regular.ttf" id="1_37p78"]
[ext_resource type="Script" uid="uid://xfpurrw4r1ld" path="res://hud.gd" id="1_64ctp"]
[ext_resource type="PackedScene" uid="uid://bt2gjgv746p3h" path="res://health_ui.tscn" id="2_8sq4i"]
[ext_resource type="AudioStream" uid="uid://c0me7layuegbo" path="res://space_game_audio/powerUp7.ogg" id="4_640wx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8sq4i"]
bg_color = Color(0.30102614, 3.0743518e-06, 0.0012758018, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_640wx"]
bg_color = Color(0.5137255, 0, 0.003921569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a2258"]
bg_color = Color(0.07602353, 4.6701868e-07, 0.000115957504, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")
health_ui_scene = ExtResource("2_8sq4i")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 720.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.5137255, 0, 0.003921569, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "0:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
custom_minimum_size = Vector2(480, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5137255, 0, 0.003921569, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 48
text = "Survive as long as you can! Shoot meteors to collect experience and upgrade your ship."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.5137255, 0, 0.003921569, 1)
theme_override_colors/font_pressed_color = Color(0.5137255, 0, 0.003921569, 1)
theme_override_colors/font_hover_color = Color(0.65207195, 4.548356e-06, 0.006615235, 1)
theme_override_colors/icon_normal_color = Color(0.14044744, 0.14044744, 0.14044744, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="Lives" type="HBoxContainer" parent="."]
offset_right = 341.33334
offset_bottom = 64.0
scale = Vector2(0.75, 0.75)

[node name="ExperienceBar" type="ProgressBar" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -144.0
offset_top = 24.0
offset_right = -19.125
offset_bottom = 51.0
grow_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_8sq4i")
theme_override_styles/fill = SubResource("StyleBoxFlat_640wx")
show_percentage = false

[node name="ExperienceLabel" type="Label" parent="."]
offset_left = 488.0
offset_top = 18.0
offset_right = 568.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0.5137255, 0, 0.003921569, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="UpgradeMenu" type="Panel" parent="."]
process_mode = 2
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -156.0
offset_right = 280.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_a2258")

[node name="UpgradeMenuHeading" type="Label" parent="UpgradeMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -282.5
offset_right = 282.5
offset_bottom = 58.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.5137255, 0, 0.003921569, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 48
text = "Select an Upgrade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeButton1" type="Button" parent="UpgradeMenu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -64.0
offset_right = 176.0
offset_bottom = 118.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.5137255, 0, 0.003921569, 1)
theme_override_colors/font_hover_color = Color(0.65207195, 4.548356e-06, 0.006615235, 1)
theme_override_colors/icon_normal_color = Color(0.14044744, 0.14044744, 0.14044744, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 48
text = "Fire Rate Up
"
autowrap_mode = 2

[node name="UpgradeButton2" type="Button" parent="UpgradeMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -64.0
offset_right = 88.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5137255, 0, 0.003921569, 1)
theme_override_colors/font_hover_color = Color(0.65207195, 4.548356e-06, 0.006615235, 1)
theme_override_colors/icon_normal_color = Color(0.14044744, 0.14044744, 0.14044744, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 48
text = "+1 Life"
autowrap_mode = 2

[node name="UpgradeButton3" type="Button" parent="UpgradeMenu"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -64.0
offset_bottom = 118.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.5137255, 0, 0.003921569, 1)
theme_override_colors/font_hover_color = Color(0.65207195, 4.548356e-06, 0.006615235, 1)
theme_override_colors/icon_normal_color = Color(0.14044744, 0.14044744, 0.14044744, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 48
text = "Boost Speed Up
"
autowrap_mode = 2

[node name="LifeAddedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_640wx")
volume_db = -27.0

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
